kubernetes/apps/flux-system/capacitor/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux
  annotations:
    external-dns.alpha.kubernetes.io/target: "${NGINX_INTERNAL_ADDR}"
spec:
  ingressClassName: internal
  rules:
    - host: &host "flux.${SECRET_INTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
